# how-to-build-agent-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: fizzbuzz.js
src/: agent.py
src/apps/: 01_chat.py  02_read.py  03_list_files.py  04_bash_tool.py  05_edit_tool.py
src/python_agents_workshop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tools/: base.py  bash.py  edit_file.py  list_files.py  read_file.py
